Turn on and fix more warnings